# Maxicajero_Desktop

./: CMakeLists.txt
View MAxicajero/Componente superior entrada de dinero/: main.blp  main.ui  settings
View MAxicajero/Componente_parte_baja_monedas_billetes/: main.blp  main.ui  settings
View MAxicajero/Configuración vista general/: main.blp  main.ui  settings
View MAxicajero/Detalles_operacion_main/: main.blp  main.ui  settings
View MAxicajero/Login/: main.blp  main.ui  settings
View MAxicajero/Menu/: main.blp  main.ui  settings
View MAxicajero/Vistta 2/: main.blp  main.ui  settings
View MAxicajero/comfiguracion_detallesSistema/: main.blp  main.ui  settings
View MAxicajero/configuracion_datosEmpresa/: main.blp  main.ui  settings
View MAxicajero/configuracion_impresora/: main.blp  main.ui  settings
View MAxicajero/configuracion_impresora/modelo_propiedades_impresion/: main.blp  settings
View MAxicajero/configuracion_usuarios/: main.blp  main.ui  settings
View MAxicajero/consulta_efectivo/: main.blp  main.ui  settings
View MAxicajero/filtro movimientos/: main.blp  main.ui  settings
include/controller/: header_bar.hpp  login.hpp
include/controller/menu/: cambio_manual.hpp  consultaEfectivo.hpp  consulta_efectivo.hpp  consulta_movimientos.hpp  menu.hpp  pago.hpp  venta.hpp
include/controller/menu/config/: datos_empresa.hpp  general.hpp  impresoras.hpp  informacion_sistema.hpp  usuarios.hpp
include/db/: database.hpp  sqlite.hpp
include/model/: header_bar.hpp  login.hpp
include/shared/: global.hpp  helper.hpp
include/view/: header_bar.hpp  login.hpp  main_window.hpp
include/view/component/: nip.hpp  tres_filas.hpp
include/view/menu/: consultaEfectivo.hpp  consulta_efectivo.hpp  consulta_movimientos.hpp  menu.hpp  pago.hpp
include/view/menu/config/: datos_empresa.hpp  general.hpp  impresoras.hpp  informacion_sistema.hpp  notepadACCESS.hpp  usuarios.hpp
src/: main.cpp
src/controller/: header_bar.cpp  login.cpp
src/controller/menu/: cambio_manual.cpp  consultaEfectivo.cpp  consulta_efectivo.cpp  consulta_movimientos.cpp  menu.cpp  pago.cpp  venta.cpp
src/controller/menu/config/: datos_empresa.cpp  general.cpp  impresoras.cpp  informacion_sistema.cpp  usuarios.cpp
src/db/: sqlite.cpp
src/model/: header_bar.cpp  login.cpp
src/shared/: global.cpp
src/view/: header_bar.cpp  login.cpp  main_window.cpp
src/view/component/: nip.cpp  tres_filas.cpp
src/view/menu/: consultaEfectivo.cpp  consulta_efectivo.cpp  consulta_movimientos.cpp  menu.cpp  pago.cpp
src/view/menu/config/: datos_empresa.cpp  general.cpp  impresoras.cpp  informacion_sistema.cpp  notepadACCESS.cpp  usuarios.cpp
